Fix nav issues on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -8775,7 +8775,7 @@ header .submenu {
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 100;
   min-width: 10rem;
   border-top-style: solid;
   border-bottom-style: solid; }
